--- a/test.html
+++ b/test.html
@@ -61,8 +61,8 @@
     </style>
 </head>
 <body>
-    <div class="typing">n9oooolk haaaaajaaaa?????</div>
-    <div class="typing2">nhebeeek bzaaaf yaa marwa</div>
+    <div class="typing">n9oooolk haaaaajaaa???</div>
+    <div class="typing2">nhebeeek yaa marwa</div>
     <div class="typing2"><p style="color: red;">&#10084;</p></div>
 
     <!-- No additional JavaScript needed for the typing effect -->
